<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16.0dip"
    android:visibility="visible">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12.0dip"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/tips_note"
                    android:textColor="@color/colorDefaultDark"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/tips_follow_the_below_instruction_in_order_to_download_videos"
                    android:textColor="@color/colorDefaultDark"
                    android:textSize="13.0sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/tips_just_copy_the_link_of_any_video_from_tiktok_facebook_instagram_etc"
                android:textColor="@color/colorDefaultDark"
                android:textSize="13.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/downloading_from_instagram"
                android:textColor="@color/colorDefaultDark"
                android:textSize="13.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/tips_make_sure_auto_download_is_running_for_fast_process"
                android:textColor="@color/colorDefaultDark"
                android:textSize="13.0sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>